--- a/index.html
+++ b/index.html
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projekt z hihu - Wędkarstwo</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Wędkarstwo</title>
 </head>
 <body>
-    
+    <header class="flexCenter">
+        <a class="flexCenter" href="index.html">
+            <svg id="logoSVG" viewBox="0 0 200 100" xmlns="http://www.w3.org/2000/svg" style="width: 100%; height: auto;">
+                <ellipse cx="100" cy="50" rx="60" ry="30" fill="lightblue" stroke="navy" stroke-width="2"/>
+                <polygon points="160,20 200,50 160,80" fill="lightblue" stroke="navy" stroke-width="2"/>
+                <circle cx="60" cy="45" r="5" fill="white" stroke="black" stroke-width="1"/>
+                <circle cx="60" cy="45" r="2" fill="black"/>
+            </svg>
+            <h1 id="logo">WĘDKARTSWO Z PASJĄ</h1>
+        </a>
+    </header>
+    <nav class="flexCenter">
+        <a class="navLinks" href="index.html">
+            <section class="navButton">
+                Strona główna
+            </section>
+        </a>
+        <a class="navLinks" href="polowy.html">
+            <section class="navButton">
+                Moje połowy
+            </section>
+        </a>
+        <a class="navLinks" href="ankieta.html">
+            <section class="navButton">
+                Ankieta
+            </section>
+        </a>
+        <section id="dropdownMenu">
+            <section class="navButton">
+                Galeria
+            </section>   
+        </section>
+    </nav>
+    <main>
+            
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
