Komentarzowanie elementów strony

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
         </a>
     </nav>
     <main>
-
+        <!--TUTAJ tabela z listą gatunków ryb okresów ochronnych i rekordów wagowych
+        Linki zewnetrzne do PZW, sklepu wędkraskiego i map google(?)
+        Linki wewnętrze przewijanie po stronie-->
     </main>
     <footer id="stopka" class="flexCenter">
         <p>
