--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
                 Ankieta
             </p>
         </a>
-        <a id="galeriaButton" class="navLinks links">
-            <p class="navButton flexCenter">
+        <section id="galeriaButton" class="navLinks links">
+            <a class="navButton flexCenter">
                 Galeria
-            </p>
+            </a>
             <ul class="dropdown-content">
-                <li><a class="dropdownLink" href="#">Link 1</a></li>
-                <li><a class="dropdownLink" href="#">Link 2</a></li>
-                <li><a class="dropdownLink" href="#">Link 3</a></li>
+                <li><a class="dropdownLink" href="galeria.html#zlowione_ryby">Złowione ryby</a></li>
+                <li><a class="dropdownLink" href="galeria.html#moje_wedki">Moje wędki</a></li>
+                <li><a class="dropdownLink" href="galeria.html#wyprawy">Wyprawy</a></li>
             </ul>
-        </a>
+        </section>
     </nav>
     <main>
         <!--TUTAJ tabela z listą gatunków ryb okresów ochronnych i rekordów wagowych
