Bug fixes + poprawa wyglądu

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </a>
     </header>
     <nav class="flexCenter">
-        <a class="navLinks links" href="index.html">
+        <a class="navLinks links actualPage" href="index.html">
             <p class="navButton flexCenter">
                 Strona główna
             </p>
@@ -39,9 +39,9 @@
                 Galeria
             </a>
             <ul class="dropdown-content">
-                <li><a class="dropdownLink" href="galeria.html#zlowione_ryby">Złowione ryby</a></li>
-                <li><a class="dropdownLink" href="galeria.html#moje_wedki">Moje wędki</a></li>
-                <li><a class="dropdownLink" href="galeria.html#wyprawy">Wyprawy</a></li>
+                <li><a class="dropdownLink smallNavButton" href="galeria.html#zlowione_ryby">Złowione ryby</a></li>
+                <li><a class="dropdownLink smallNavButton" href="galeria.html#moje_wedki">Moje wędki</a></li>
+                <li><a class="dropdownLink smallNavButton" href="galeria.html#wyprawy">Wyprawy</a></li>
             </ul>
         </section>
     </nav>
@@ -50,7 +50,9 @@
         Linki zewnetrzne do PZW, sklepu wędkraskiego i map google(?)
         Linki wewnętrze przewijanie po stronie-->
     </main>
-    <footer id="stopka" class="flexCenter">
+    <footer class="flexCenter">
+        <a href="https://pzw.pl/" target="_blank">Polski Związek Wędkarski</a>
+        <a href="https://sklepwedkarski.pl/" target="_blank">Sklep wędkarski</a>
         <p>
             Strona wykonana dla projektów z przedmiotów: HiH i WAI przez<br>
             Oleh'a Radchenko (211352)
