--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 Ankieta
             </p>
         </a>
-        <section id="galeriaButton" class="navLinks links">
-            <a class="navButton flexCenter">
+        <section id="galeriaButton" class="navLinks">
+            <a class="navButton flexCenter links" href="galeria.html">
                 Galeria
             </a>
             <ul class="dropdown-content">
@@ -47,8 +47,150 @@
     </nav>
     <main>
         <!--TUTAJ tabela z listą gatunków ryb okresów ochronnych i rekordów wagowych
-        Linki zewnetrzne do PZW, sklepu wędkraskiego i map google(?)
+        Linki zewnetrzne do PZW, sklepu wędkraskiego i map google(?) done
         Linki wewnętrze przewijanie po stronie-->
+        <section id="ochronaRyb">
+            <h1>Ochrona ryb w Polsce – co każdy wędkarz powinien wiedzieć</h1>
+
+            <nav id="spisTresci">
+                <h3>Spis treści:</h3>
+                <ul>
+                <li><a href="#dlaczego">Dlaczego okresy ochronne są ważne?</a></li>
+                <li><a href="#okresy">Okresy ochronne i wymiary ryb</a></li>
+                <li><a href="#kontrola">Jak sprawdzić aktualne przepisy?</a></li>
+                <li><a href="#etyka">Etyka i odpowiedzialne wędkarstwo</a></li>
+                <li><a href="#tabela">Tabela gatunków i okresów ochronnych</a></li>
+                </ul>
+            </nav>
+
+            <article id="dlaczego">
+                <h2>Dlaczego okresy ochronne są ważne?</h2>
+                <p>
+                Okresy ochronne ryb zostały wprowadzone, aby chronić populacje podczas ich tarła oraz umożliwić im bezpieczne rozmnażanie. 
+                Dzięki temu wędkarze mogą cieszyć się bogactwem gatunków w przyszłości. 
+                W Polsce regulacje te są ściśle określone przez <strong>Regulamin Amatorskiego Połowu Ryb (RAPR)</strong>.
+                </p>
+            </article>
+
+            <article id="okresy">
+                <h2>Okresy ochronne i wymiary ryb</h2>
+                <p>
+                Każdy gatunek ryby ma inny okres ochronny oraz minimalny wymiar, który pozwala na jej zabranie. 
+                Przykładowo, <em>szczupak</em> jest chroniony od 1 stycznia do 30 kwietnia, a jego minimalny wymiar ochronny to 50 cm. 
+                Warto zapoznać się z pełną tabelą gatunków, aby unikać naruszenia przepisów.
+                </p>
+            </article>
+
+            <article id="kontrola">
+                <h2>Jak sprawdzić aktualne przepisy?</h2>
+                <p>
+                Najpewniejszym źródłem informacji są strony <a href="https://www.pzw.org.pl">Polskiego Związku Wędkarskiego (PZW)</a>, 
+                gdzie publikowane są aktualne wersje RAPR oraz komunikaty dotyczące zmian w poszczególnych okręgach. 
+                Warto też mieć przy sobie papierowy lub elektroniczny regulamin podczas wyprawy.
+                </p>
+            </article>
+
+            <article id="etyka">
+                <h2>Etyka i odpowiedzialne wędkarstwo</h2>
+                <p>
+                Wędkarstwo to nie tylko sport czy pasja, ale także odpowiedzialność za przyrodę. 
+                Szanuj złowione ryby, wypuszczaj okazy w okresie ochronnym oraz nie zostawiaj śmieci nad wodą. 
+                Pamiętaj, że to od nas zależy, jakie ryby będą łowić kolejne pokolenia.
+                </p>
+            </article>
+
+            <article id="tabela">
+                <h2>Tabela gatunków i okresów ochronnych</h2>
+                <p>Sprawdź szczegółowe informacje o najpopularniejszych gatunkach ryb w Polsce:</p>
+
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Gatunek</th>
+                            <th>Okres ochronny</th>
+                            <th>Wymiar ochronny</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Szczupak</td>
+                            <td>1 stycznia – 30 kwietnia</td>
+                            <td>50 cm</td>
+                        </tr>
+                        <tr>
+                            <td>Sandacz</td>
+                            <td>1 stycznia – 31 maja</td>
+                            <td>50 cm</td>
+                        </tr>
+                        <tr>
+                            <td>Boleń</td>
+                            <td>1 stycznia – 30 kwietnia</td>
+                            <td>40 cm</td>
+                        </tr>
+                        <tr>
+                            <td>Sum</td>
+                            <td>1 listopada – 30 czerwca</td>
+                            <td>70 cm</td>
+                        </tr>
+                        <tr>
+                            <td>Węgorz</td>
+                            <td>1 grudnia – 31 marca</td>
+                            <td>50 cm</td>
+                        </tr>
+                        <tr>
+                            <td>Okoń</td>
+                            <td>Brak ogólnego okresu ochronnego</td>
+                            <td>Brak(chyba że okręg ustali inaczej)</td>
+                        </tr>
+                        <tr>
+                            <td>Pstrąg potokowy</td>
+                            <td>1 września – 31 stycznia</td>
+                            <td>30 cm</td>
+                        </tr>
+                        <tr>
+                            <td>Lipień</td>
+                            <td>1 marca – 31 maja</td>
+                            <td>30 cm</td>
+                        </tr>
+                        <tr>
+                            <td>Sielawa</td>
+                            <td>15 października – 31 grudnia</td>
+                            <td>18 cm</td>
+                        </tr>
+                        <tr>
+                            <td>Płoć</td>
+                            <td>Brak ogólnego okresu ochronnego</td>
+                            <td>Brak wymiaru ochronnego</td>
+                        </tr>
+                        <tr>
+                            <td>Leszcz</td>
+                            <td>Brak ogólnego okresu ochronnego</td>
+                            <td>Brak wymiaru ochronnego</td>
+                        </tr>
+                        <tr>
+                            <td>Lin</td>
+                            <td>1 marca – 31 maja</td>
+                            <td>25 cm</td>
+                        </tr>
+                        <tr>
+                            <td>Karp</td>
+                            <td>Brak ogólnego okresu ochronnego</td>
+                            <td>30 cm</td>
+                        </tr>
+                        <tr>
+                            <td>Jaź</td>
+                            <td>1 marca – 31 maja</td>
+                            <td>25 cm</td>
+                        </tr>
+                        <tr>
+                            <td>Brzana</td>
+                            <td>1 stycznia – 30 czerwca</td>
+                            <td>40 cm</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </article>
+        </section>
     </main>
     <footer class="flexCenter">
         <a href="https://pzw.pl/" target="_blank">Polski Związek Wędkarski</a>
