--- a/ankieta.html
+++ b/ankieta.html
@@ -3,16 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Ankieta</title>
 </head>
 <body>
-    <!--Pytania do ankiety(o preferencje wędkarza)
-    Imie, nazwisko, email
-    ulubiony gatunbek ryby(radio button)
-    ulubiony rodzaj łowiska(lista rozwijana)
-    sprzęt który posiada(checkboxy)
-    Komentarz ogólny(textarea)
-    data ostatniego połowu
-    przuciski wyczyść i wyślij-->
+    <header class="flexCenter">
+        <a class="flexCenter links" href="index.html">
+            <svg id="logoSVG" viewBox="0 0 200 100" xmlns="http://www.w3.org/2000/svg" style="width: 100%; height: auto;">
+                <ellipse cx="100" cy="50" rx="60" ry="30" fill="lightblue" stroke="navy" stroke-width="2"/>
+                <polygon points="160,20 200,50 160,80" fill="lightblue" stroke="navy" stroke-width="2"/>
+                <circle cx="60" cy="45" r="5" fill="white" stroke="black" stroke-width="1"/>
+                <circle cx="60" cy="45" r="2" fill="black"/>
+            </svg>
+            <h1 id="logo">WĘDKARTSWO Z PASJĄ</h1>
+        </a>
+    </header>
+    <nav class="flexCenter">
+        <a class="navLinks links" href="index.html">
+            <p class="navButton flexCenter">
+                Strona główna
+            </p>
+        </a>
+        <a class="navLinks links" href="polowy.html">
+            <p class="navButton flexCenter">
+                Moje połowy
+            </p>
+        </a>
+        <a class="navLinks links actualPage" href="ankieta.html">
+            <p class="navButton flexCenter">
+                Ankieta
+            </p>
+        </a>
+        <section id="galeriaButton" class="navLinks">
+            <a class="navButton flexCenter links" href="galeria.html">
+                Galeria
+            </a>
+            <ul class="dropdown-content">
+                <li><a class="dropdownLink smallNavButton" href="galeria.html#zlowione_ryby">Złowione ryby</a></li>
+                <li><a class="dropdownLink smallNavButton" href="galeria.html#moje_wedki">Moje wędki</a></li>
+                <li><a class="dropdownLink smallNavButton" href="galeria.html#wyprawy">Wyprawy</a></li>
+            </ul>
+        </section>
+    </nav>
+    <main>
+        <!--Pytania do ankiety(o preferencje wędkarza)
+            Imie, nazwisko, email
+            ulubiony gatunbek ryby(radio button)
+            ulubiony rodzaj łowiska(lista rozwijana)
+            sprzęt który posiada(checkboxy)
+            Komentarz ogólny(textarea)
+            data ostatniego połowu
+            przuciski wyczyść i wyślij-->
+    </main>
+    <footer class="flexCenter">
+        <a href="https://pzw.pl/" target="_blank">Polski Związek Wędkarski</a>
+        <a href="https://sklepwedkarski.pl/" target="_blank">Sklep wędkarski</a>
+        <p>
+            Strona wykonana dla projektów z przedmiotów: HiH i WAI przez<br>
+            Oleh'a Radchenko (211352)
+        </p>
+    </footer>
 </body>
 </html>
