--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main_style.css">
     <title>Wędkarstwo</title>
 </head>
 <body>
@@ -47,7 +47,7 @@
     </nav>
     <main>
         <section id="ochronaRyb">
-            <h1>Ochrona ryb w Polsce – co każdy wędkarz powinien wiedzieć</h1>
+            <h1 class="title">Ochrona ryb w Polsce – co każdy wędkarz powinien wiedzieć</h1>
 
             <nav id="spisTresci">
                 <h3>Spis treści:</h3>
