Doszlifowany i zoptymalizowany kod
Dodanie galerii, troszkę zmiana kodu. Z wymagań została walidacja

--- a/galeria.html
+++ b/galeria.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main_style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="galery_style.css">
     <title>GALERIA</title>
 </head>
 <body>
@@ -46,10 +47,56 @@
         </section>
     </nav>
     <main>
-        <!--GALERIA ZDJĘĆ-->
-        <section id="zlowione_ryby"><a href="#moje_wedki">XD1</a></section>
-        <section id="moje_wedki">XD2</section>
-        <section id="wyprawy">XD3</section>
+        <section id="zlowione_ryby">
+            <h2 class="title">Galeria ryb</h2>
+            <div class="gallery">
+                <div class="img_wrapper"><img src="img/ryba1_mini.jpg" class="mini" alt="Ryba 1"></div>
+                <div class="img_wrapper"><img src="img/ryba2_mini.jpg" class="mini" alt="Ryba 2"></div>
+                <div class="img_wrapper"><img src="img/ryba3_mini.jpg" class="mini" alt="Ryba 3"></div>
+                <div class="img_wrapper"><img src="img/ryba4_mini.jpg" class="mini" alt="Ryba 4"></div>
+                <div class="img_wrapper"><img src="img/ryba5_mini.jpg" class="mini" alt="Ryba 5"></div>
+                <div class="img_wrapper"><img src="img/ryba6_mini.jpg" class="mini" alt="Ryba 6"></div>
+                <div class="img_wrapper"><img src="img/ryba7_mini.jpg" class="mini" alt="Ryba 7"></div>
+                <div class="img_wrapper"><img src="img/ryba8_mini.jpg" class="mini" alt="Ryba 8"></div>
+                <div class="img_wrapper"><img src="img/ryba9_mini.jpg" class="mini" alt="Ryba 9"></div>
+                <div class="img_wrapper"><img src="img/ryba10_mini.jpg" class="mini" alt="Ryba 10"></div>
+                <div class="img_wrapper"><img src="img/ryba12_mini.jpg" class="mini" alt="Ryba 12"></div>
+                <div class="img_wrapper"><img src="img/ryba13_mini.jpg" class="mini" alt="Ryba 13"></div>
+                <div class="img_wrapper"><img src="img/ryba14_mini.jpg" class="mini" alt="Ryba 14"></div>
+                <div class="img_wrapper"><img src="img/ryba15_mini.jpg" class="mini" alt="Ryba 15"></div>
+                <div class="img_wrapper"><img src="img/ryba16_mini.jpg" class="mini" alt="Ryba 16"></div>
+                <div class="img_wrapper"><img src="img/ryba17_mini.jpg" class="mini" alt="Ryba 17"></div>
+                <div class="img_wrapper"><img src="img/ryba18_mini.jpg" class="mini" alt="Ryba 18"></div>
+                <div class="img_wrapper"><img src="img/ryba19_mini.jpg" class="mini" alt="Ryba 19"></div>
+            </div>
+        </section>
+        
+        <section id="moje_wedki">
+            <h2 class="title">Galeria wędek</h2>
+            <div class="gallery">
+                <div class="img_wrapper"><img src="img/wedka1_mini.jpg" class="mini" alt="Wędka 1"></div>
+                <div class="img_wrapper"><img src="img/wedka2_mini.jpg" class="mini" alt="Wędka 2"></div>
+                <div class="img_wrapper"><img src="img/wedka3_mini.jpg" class="mini" alt="Wędka 3"></div>
+            </div>
+        </section>
+
+        <section id="wyprawy">
+            <h2 class="title">Galeria wypraw rybackich</h2>
+            <div class="gallery">
+                <div class="img_wrapper"><img src="img/wyprawa1_mini.jpg" class="mini" alt="Wyprawa 1"></div>
+                <div class="img_wrapper"><img src="img/wyprawa2_mini.jpg" class="mini" alt="Wyprawa 2"></div>
+                <div class="img_wrapper"><img src="img/wyprawa3_mini.jpg" class="mini" alt="Wyprawa 3"></div>
+                <div class="img_wrapper"><img src="img/wyprawa4_mini.jpg" class="mini" alt="Wyprawa 4"></div>
+                <div class="img_wrapper"><img src="img/wyprawa5_mini.jpg" class="mini" alt="Wyprawa 5"></div>
+                <div class="img_wrapper"><img src="img/wyprawa6_mini.jpg" class="mini" alt="Wyprawa 6"></div>
+            </div>
+        </section>
+
+        <div id="imageMaxiBlock" class="maxiImageBlock">
+            <span class="close">&times;</span>
+            <img class="maxiImage" id="maxiImg">
+            <div id="caption"></div>
+        </div>
     </main>
     <footer class="flexCenter">
         <a href="https://pzw.pl/" target="_blank">Polski Związek Wędkarski</a>
@@ -59,5 +106,28 @@
             Oleh'a Radchenko (211352)
         </p>
     </footer>
+
+    <script>
+        const imageMaxBlock = document.getElementById("imageMaxiBlock");
+        const maxiImg = document.getElementById("maxiImg");
+        const captionText = document.getElementById("caption");
+        const closeBtn = document.querySelector(".close");
+
+        document.querySelectorAll(".mini").forEach(img => {
+            img.addEventListener("click", () => {
+            imageMaxBlock.style.display = "block";
+            maxiImg.src = img.src.replace("_mini", "");
+            captionText.textContent = img.alt;
+            });
+        });
+
+        closeBtn.addEventListener("click", () => {
+            imageMaxBlock.style.display = "none";
+        });
+
+        imageMaxBlock.addEventListener("click", (e) => {
+            if (e.target === imageMaxBlock) imageMaxBlock.style.display = "none";
+        });
+    </script>
 </body>
 </html>
