--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="main_style.css">
     <title>Wędkarstwo</title>
 </head>
@@ -81,7 +82,7 @@
             <article id="kontrola">
                 <h2>Jak sprawdzić aktualne przepisy?</h2>
                 <p>
-                Najpewniejszym źródłem informacji są strony <a href="https://www.pzw.org.pl">Polskiego Związku Wędkarskiego (PZW)</a>, 
+                Najpewniejszym źródłem informacji są strony <a href="https://www.pzw.org.pl" target="_blank">Polskiego Związku Wędkarskiego (PZW)</a>, 
                 gdzie publikowane są aktualne wersje RAPR oraz komunikaty dotyczące zmian w poszczególnych okręgach. 
                 Warto też mieć przy sobie papierowy lub elektroniczny regulamin podczas wyprawy.
                 </p>
