--- a/polowy.html
+++ b/polowy.html
@@ -15,7 +15,7 @@
                 <circle cx="60" cy="45" r="5" fill="white" stroke="black" stroke-width="1"/>
                 <circle cx="60" cy="45" r="2" fill="black"/>
             </svg>
-            <h1 id="logo">WĘDKARTSWO Z PASJĄ</h1>
+            <span id="logo">WĘDKARTSWO Z PASJĄ</span>
         </a>
     </header>
     <nav class="flexCenter">
@@ -34,7 +34,7 @@
                 Ankieta
             </p>
         </a>
-        <section id="galeriaButton" class="navLinks">
+        <div id="galeriaButton" class="navLinks">
             <a class="navButton flexCenter links" href="galeria.html">
                 Galeria
             </a>
@@ -43,7 +43,7 @@
                 <li><a class="dropdownLink smallNavButton" href="galeria.html#moje_wedki">Moje wędki</a></li>
                 <li><a class="dropdownLink smallNavButton" href="galeria.html#wyprawy">Wyprawy</a></li>
             </ul>
-        </section>
+        </div>
     </nav>
     <main>
         <!--FORMULARZ NA WAI-->
