FINAL COMMIT(PLZ)
Niby skończone wszystko, ale może będą lekkie poprawki. Walidacja zrobiona na 100%, dodanie więcej danych do xml, i dodanie union do schema

--- a/galeria.html
+++ b/galeria.html
@@ -60,6 +60,7 @@
                 <div class="img_wrapper"><img src="img/ryba8_mini.jpg" class="mini" alt="Ryba 8"></div>
                 <div class="img_wrapper"><img src="img/ryba9_mini.jpg" class="mini" alt="Ryba 9"></div>
                 <div class="img_wrapper"><img src="img/ryba10_mini.jpg" class="mini" alt="Ryba 10"></div>
+                <div class="img_wrapper"><img src="img/ryba11_mini.jpg" class="mini" alt="Ryba 11"></div>
                 <div class="img_wrapper"><img src="img/ryba12_mini.jpg" class="mini" alt="Ryba 12"></div>
                 <div class="img_wrapper"><img src="img/ryba13_mini.jpg" class="mini" alt="Ryba 13"></div>
                 <div class="img_wrapper"><img src="img/ryba14_mini.jpg" class="mini" alt="Ryba 14"></div>
